更新.gitignore以忽略数据库配置文件和SQLite数据库文件，删除演示数据生成脚本及相关数据库文件，更新README以反映新的数据库配置要求和项目结构，优化后端服务的数据库连接和初始化逻辑。

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,11 @@ dist/
 # Local configuration files
 config.local.py
 settings.local.py
+
+# Database configuration
+config/database.conf
+
+# SQLite database files (legacy)
+*.db
+*.sqlite
+*.sqlite3
