将项目名称从QueenBee更改为Qunkong，更新相关文档、配置文件和代码中的引用，确保一致性。包括.gitignore、Docker配置、数据库配置、前端和后端代码等多个文件的修改。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "queenbee-frontend",
+  "name": "qunkong-frontend",
   "version": "1.0.0",
-  "description": "QueenBee 前端管理系统",
+  "description": "Qunkong 前端管理系统",
   "scripts": {
     "dev": "cross-env NODE_NO_WARNINGS=1 vite",
     "build": "vite build",
