--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "element-plus": "^2.3.12",
     "monaco-editor": "^0.44.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
