refactor(docker): 重构前端Dockerfile并优化.dockerignore配置
- 将前端 Dockerfile 重构为多阶段构建，使用 nginx 部署生产版本
- 更新 .dockerignore 忽略规则，增强忽略模式并按类别组织
- 移除了 DOCKER_README.md、FEATURE_COMPLETION_REPORT.md、
  NEW_TAB_TERMINAL_FEATURE.md 和 PROJECT_SUMMARY.md 文件
- 调整了前端Docker暴露端口从3000到80，并改进构建参数传递

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,47 +1,54 @@
-# Git
+# 忽略node_modules（会在容器内重新安装）
+node_modules
+npm-debug.log
+
+# 忽略构建输出
+dist
+build
+
+# 忽略版本控制
 .git
 .gitignore
 
-# Documentation
-README.md
-docs/
-*.md
-
-# Node modules
-node_modules
-npm-debug.log*
-
-# Python cache
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.Python
-*.so
-.coverage
-.pytest_cache
-
-# IDE
+# 忽略IDE配置
 .vscode
 .idea
 *.swp
 *.swo
 
-# OS
+# 忽略环境配置
+.env
+.env.local
+.env.*.local
+
+# 忽略测试和文档
+test
+tests
+*.md
+docs
+
+# 忽略日志
+logs
+*.log
+
+# 忽略Python相关（前端构建不需要）
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.egg
+*.egg-info
+.venv
+venv
+ENV
+
+# 忽略临时文件
+*.tmp
+*.temp
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-logs/
-
-# Temporary files
-*.tmp
-*.temp
-
-# Build artifacts
-dist/
-build/
-
-# Config (will be mounted)
-config/database.conf
+# 忽略Docker相关
+docker-compose*.yml
+Dockerfile*
