--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,20 +1,42 @@
-# 前端 Vue.js 应用 Dockerfile
-FROM node:18-alpine
+# 前端 React 应用 Dockerfile（生产模式）
+
+# 第一阶段：构建应用
+FROM node:18-alpine AS builder
 
 # 设置工作目录
 WORKDIR /app
 
+# 接收构建参数
+ARG VITE_API_URL
+ARG VITE_WS_URL
+
+# 设置环境变量（Vite会在构建时读取）
+ENV VITE_API_URL=${VITE_API_URL}
+ENV VITE_WS_URL=${VITE_WS_URL}
+
 # 复制 package.json 和 package-lock.json
 COPY package*.json ./
 
-# 安装依赖
-RUN npm ci --only=production --no-audit --prefer-offline
+# 安装所有依赖（包括devDependencies，因为构建需要）
+RUN npm ci --no-audit --prefer-offline
 
 # 复制源代码
 COPY . .
 
-# 暴露端口
-EXPOSE 3000
+# 构建生产版本
+RUN npm run build
 
-# 启动应用
-CMD ["npm", "run", "dev"]
+# 第二阶段：使用 nginx 服务静态文件
+FROM nginx:alpine
+
+# 复制构建产物到 nginx 目录
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# 复制 nginx 配置（可选，稍后创建）
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# 暴露端口
+EXPOSE 80
+
+# 启动 nginx
+CMD ["nginx", "-g", "daemon off;"]
