--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "@guolao/vue-monaco-editor": "^1.5.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "antd": "^5.8.0",
+    "@ant-design/icons": "^5.2.0",
+    "@monaco-editor/react": "^4.6.0",
     "axios": "^1.5.0",
-    "element-plus": "^2.3.12",
     "monaco-editor": "^0.44.0",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
     "@xterm/xterm": "^5.5.0",
     "@xterm/addon-fit": "^0.10.0",
-    "@xterm/addon-web-links": "^0.11.0"
+    "@xterm/addon-web-links": "^0.11.0",
+    "zmodem.js": "^0.1.10"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "cross-env": "^10.0.0",
     "vite": "^4.4.9"
   }
