--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -32,8 +32,8 @@ FROM nginx:alpine
 # 复制构建产物到 nginx 目录
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# 复制 nginx 配置（可选，稍后创建）
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# 复制 nginx 配置
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 # 暴露端口
 EXPOSE 80
