feat: 添加 Agent 自动构建工作流和更新 README
- 新增 GitHub Actions 工作流，当 client.py 变化时自动打包
- 打包环境为 Linux x86_64
- 打包完成后创建 GitHub Release 并更新到仓库
- 更新 README.md 包含最新的项目信息和 Docker 镜像说明
- 创建 releases 目录用于存放构建的 Agent 二进制文件

--- a/test/requirements-build.txt
+++ b/test/requirements-build.txt
@@ -1,12 +1,1 @@
-# WebSocket通信
-websockets==11.0.3
-
-# 系统监控和进程管理
-psutil==5.9.5
-
-# HTTP请求（用于获取外网IP等）
-requests==2.31.0
-
-pyinstaller>=5.0.0
-setuptools
-wheel
+PyInstaller==6.3.0
