chore: update GitHub Actions workflow permissions for release creation
- Added write permissions for contents to enable the creation of releases and code pushes in the build-agent workflow.

--- a/.github/workflows/build-agent.yml
+++ b/.github/workflows/build-agent.yml
@@ -14,6 +14,10 @@ on:
 env:
   AGENT_NAME: qunkong-agent
 
+# 需要 write 权限才能创建 release 和推送代码
+permissions:
+  contents: write
+
 jobs:
   build-agent:
     name: Build Agent for Linux
