--- a/nginx.conf
+++ b/nginx.conf
@@ -31,15 +31,17 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # WebSocket 代理
-    location /ws {
-        proxy_pass http://backend:8765;
+    # WebSocket 代理（/ws/terminal/xxx -> backend:8765/terminal/xxx）
+    location /ws/ {
+        proxy_pass http://backend:8765/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
     }
 
     # 健康检查端点
